--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,36 +9,36 @@
 
     <TextView
         android:id="@+id/dance_category"
-        style="@style/NormalText"
-        android:paddingTop="@dimen/margin40"
+        style="@style/MainText"
+        android:paddingTop="@dimen/margin20"
         android:drawableLeft="@drawable/dance"
         android:drawablePadding="@dimen/margin20"
         android:text="@string/dance"></TextView>
 
     <TextView
         android:id="@+id/rock_category"
-        style="@style/NormalText"
+        style="@style/MainText"
         android:drawableLeft="@drawable/rock"
         android:drawablePadding="@dimen/margin20"
         android:text="@string/rock"></TextView>
 
     <TextView
         android:id="@+id/jazz_category"
-        style="@style/NormalText"
+        style="@style/MainText"
         android:drawableLeft="@drawable/jazz"
         android:drawablePadding="@dimen/margin20"
         android:text="@string/jazz"></TextView>
 
     <TextView
         android:id="@+id/latin_category"
-        style="@style/NormalText"
+        style="@style/MainText"
         android:drawableLeft="@drawable/latin"
         android:drawablePadding="@dimen/margin20"
         android:text="@string/latin"></TextView>
 
     <TextView
         android:id="@+id/hiphop_category"
-        style="@style/NormalText"
+        style="@style/MainText"
         android:drawableLeft="@drawable/hiphop"
         android:drawablePadding="@dimen/margin20"
         android:text="@string/hiphop"></TextView>
