--- a/app/src/main/res/layout/song_item.xml
+++ b/app/src/main/res/layout/song_item.xml
@@ -4,13 +4,12 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeight"
-    android:orientation="horizontal"
-    android:padding="16dp">
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/list_item_icon"
-        android:layout_width="60dp"
-        android:layout_height="60dp" />
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
 
     <LinearLayout
         android:layout_width="0dp"
