--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,8 +3,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="margin10">10dp</dimen>
     <dimen name="margin20">20dp</dimen>
     <dimen name="margin40">40dp</dimen>
     <dimen name="mediumText">20sp</dimen>
     <dimen name="normalText">16sp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
